# igar-indobert-shap

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run_pipeline.py
notebooks/: full_pipeline.ipynb  run_colab.ipynb
scripts/: run_cloud_gpu.sh
src/: analysis.py  baseline.py  dataset.py  evaluate.py  explain.py  preprocessing.py  train.py
